add and scaffold the movie model

--- a/RazorPagesMovie/appsettings.json
+++ b/RazorPagesMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-ce819e30-79a0-41a9-be60-39dda75f7cc8;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
