scaffold the movie model and movie mvc context

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-57e04442-77dc-4cd9-a963-aee0d74e542d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
