--- a/OdeToFood/OdeToFood.csproj
+++ b/OdeToFood/OdeToFood.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <ProjectReference Include="..\OdeToFoo.Data\OdeToFoo.Data.csproj" />
+  </ItemGroup>
+
 </Project>
