add a connection string

--- a/OdeToFood/appsettings.json
+++ b/OdeToFood/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "Message from App Setting!"
+  "Message": "Message from App Setting!",
+  "ConnectionStrings": {
+    "OdeToFoodDb":  "Data Source=(localdb)\\MSSQLLocalDb;Initial Catalog=OdeToFood;Integrated Security=True;"
+  }
 }
