--- a/BethanysPieShop/BethanysPieShop.csproj
+++ b/BethanysPieShop/BethanysPieShop.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="wwwroot\Scripts\" />
   </ItemGroup>
 
 </Project>
